--- a/carla.ipynb
+++ b/carla.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "<carla.libcarla.World at 0x18e16133dc0>"
+       "<carla.libcarla.World at 0x1d4b296dea0>"
       ]
      },
      "execution_count": 3,
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9871b17b",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8cdf56f5",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "fad59360",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6318e231",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2d213fcb",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "b8a5530e",
    "metadata": {},
    "outputs": [],
@@ -143,10 +143,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "id": "bb2df4ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# Пример подключения:\n",
     "camera.listen(show_image)"
@@ -154,21 +166,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "90ab9fed",
+   "execution_count": null,
+   "id": "6c0694cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Управление: газ, поворот, тормоз\n",
-    "control = carla.VehicleControl()\n",
-    "control.throttle = 0.5  # Газ от 0.0 до 1.0\n",
-    "control.steer = 0.0     # Поворот от -1.0 до 1.0\n",
+    "control = carla.VehicleControl()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "91ec8cc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "control.steer = +0.00     # Поворот от -1.0 до 1.0\n",
     "ego_vehicle.apply_control(control)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
+   "id": "90ab9fed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "control.throttle = 0.5  # Газ от 0.0 до 1.0\n",
+    "control.brake = 0.0\n",
+    "ego_vehicle.apply_control(control)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "c6bcc9f1",
    "metadata": {},
    "outputs": [],
@@ -178,6 +210,22 @@
     "control.brake = 1.0\n",
     "ego_vehicle.apply_control(control)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65a67460",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd08ac37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
