--- a/sim_carla.ipynb
+++ b/sim_carla.ipynb
@@ -13,14 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "13edb07e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Connect to the client and retrieve the world object\n",
+    "# First of all, we need to create the client that will send the requests\n",
+    "# to the simulator. Here we'll assume the simulator is accepting\n",
+    "# requests in the localhost at port 2000.\n",
     "client = carla.Client('localhost', 2000)\n",
-    "world = client.get_world()"
+    "client.set_timeout(2.0)"
    ]
   },
   {
@@ -46,15 +48,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9871b17b",
+   "execution_count": 22,
+   "id": "c6622da7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Once we have a client we can retrieve the world that is currently\n",
+    "# running.\n",
+    "world = client.get_world()\n",
+    "\n",
+    "# The world contains the list blueprints that we can use for adding new\n",
+    "# actors into the simulation.\n",
+    "blueprint_library = world.get_blueprint_library()\n",
+    "\n",
     "# Get the blueprint library and filter for the vehicle blueprints\n",
     "vehicle_blueprints = world.get_blueprint_library().filter('*vehicle*')\n",
     "# Get the map's spawn points\n",
     "spawn_points = world.get_map().get_spawn_points()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a98afa0",
+   "metadata": {},
+   "source": [
+    "# Basic tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3248b717",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actor_list = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bc64638",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now let's filter all the blueprints of type 'vehicle' and choose one\n",
+    "# at random.\n",
+    "bp = random.choice(blueprint_library.filter('vehicle'))\n",
+    "\n",
+    "# A blueprint contains the list of attributes that define a vehicle's\n",
+    "# instance, we can read them and modify some of them. For instance,\n",
+    "# let's randomize its color.\n",
+    "if bp.has_attribute('color'):\n",
+    "    color = random.choice(bp.get_attribute('color').recommended_values)\n",
+    "    bp.set_attribute('color', color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6561788f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we need to give an initial transform to the vehicle. We choose a\n",
+    "# random transform from the list of recommended spawn points of the map.\n",
+    "transform = random.choice(world.get_map().get_spawn_points())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "192456a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# So let's tell the world to spawn the vehicle.\n",
+    "vehicle = world.spawn_actor(bp, transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d4378daf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "created vehicle.diamondback.century\n"
+     ]
+    }
+   ],
+   "source": [
+    "# It is important to note that the actors we create won't be destroyed\n",
+    "# unless we call their \"destroy\" function. If we fail to call \"destroy\"\n",
+    "# they will stay in the simulation even after we quit the Python script.\n",
+    "# For that reason, we are storing all the actors we create so we can\n",
+    "# destroy them afterwards.\n",
+    "actor_list.append(vehicle)\n",
+    "print('created %s' % vehicle.type_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b47e4ca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's put the vehicle to drive around.\n",
+    "vehicle.set_autopilot(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "41289733",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "created sensor.camera.depth\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's add now a \"depth\" camera attached to the vehicle. Note that the\n",
+    "# transform we give here is now relative to the vehicle.\n",
+    "camera_bp = blueprint_library.find('sensor.camera.depth')\n",
+    "camera_transform = carla.Transform(carla.Location(x=1.5, z=2.4))\n",
+    "camera = world.spawn_actor(camera_bp, camera_transform, attach_to=vehicle)\n",
+    "actor_list.append(camera)\n",
+    "print('created %s' % camera.type_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b89b1c07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moved vehicle to Location(x=-116.591125, y=39.366714, z=-2.067356)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Oh wait, I don't like the location we gave to the vehicle, I'm going\n",
+    "# to move it a bit forward.\n",
+    "location = vehicle.get_location()\n",
+    "location.x += 40\n",
+    "vehicle.set_location(location)\n",
+    "print('moved vehicle to %s' % location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ab795863",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we register the function that will be called each time the sensor\n",
+    "# receives an image. In this example we are saving the image to disk\n",
+    "# converting the pixels to gray-scale.\n",
+    "cc = carla.ColorConverter.LogarithmicDepth\n",
+    "camera.listen(lambda image: image.save_to_disk('_out/%06d.png' % image.frame, cc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bddae5aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "camera.destroy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "30078210",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vehicle.destroy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b6b1bca",
+   "metadata": {},
+   "source": [
+    "# Playground"
    ]
   },
   {
@@ -72,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "fad59360",
    "metadata": {},
    "outputs": [],
@@ -97,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2d213fcb",
    "metadata": {},
    "outputs": [],
