--- a/sim_carla.ipynb
+++ b/sim_carla.ipynb
@@ -13,14 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "13edb07e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First of all, we need to create the client that will send the requests\n",
-    "# to the simulator. Here we'll assume the simulator is accepting\n",
-    "# requests in the localhost at port 2000.\n",
+    "# Подключение к симулятору python клиентом\n",
     "client = carla.Client('localhost', 2000)\n",
     "client.set_timeout(2.0)"
    ]
@@ -48,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "c6622da7",
    "metadata": {},
    "outputs": [],
@@ -275,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8cdf56f5",
    "metadata": {},
    "outputs": [],
@@ -288,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "fad59360",
    "metadata": {},
    "outputs": [],
@@ -299,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6318e231",
    "metadata": {},
    "outputs": [],
@@ -318,19 +316,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a transform to place the camera on top of the vehicle\n",
+    "# Создание сенсора \"камера\"\n",
     "camera_init_trans = carla.Transform(carla.Location(z=1.5))\n",
-    "\n",
-    "# We create the camera through a blueprint that defines its properties\n",
     "camera_bp = world.get_blueprint_library().find('sensor.camera.rgb')\n",
-    "\n",
-    "# We spawn the camera and attach it to our ego vehicle\n",
     "camera = world.spawn_actor(camera_bp, camera_init_trans, attach_to=ego_vehicle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b8a5530e",
    "metadata": {},
    "outputs": [],
@@ -359,22 +353,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "bb2df4ca",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Пример подключения:\n",
     "camera.listen(show_image)"
